# sp500dle

./: docker-compose.yml
backend/: .env  Cargo.toml  Rocket.toml  diesel.toml
backend/migrations/2024-06-11-033630_create_stocks/: up.sql
backend/src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
backend/static/: asset-manifest.json  index.html
backend/static/static/js/: 453.8b11d9b8.chunk.js  453.8b11d9b8.chunk.js.map  main.4e5bf0d8.js  main.4e5bf0d8.js.map
frontend/sp500dle-frontend/: package-lock.json  package.json
frontend/sp500dle-frontend/src/: App.tsx
