[package]
name = "SP500dle"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_contrib = { version = "0.4.11" } # Match the latest compatible version
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
winapi = { version = "0.3.9", features = ["winerror"] }